--- a/meson.build
+++ b/meson.build
@@ -111,6 +111,7 @@ subdir('libvaladoc')
 subdir('valadoc')
 subdir('vapi')
 subdir('doc')
+subdir('tests')
 
 install_data('vala.m4', install_dir: join_paths('share', 'aclocal'))
 
